[project]
name = "tin"
description = "An autograder for Computer Science Classes"
readme = "README.md"
authors = [
    {name = "The TJHSST Computer Systems Lab", email = "tin@tjhsst.edu"},
]
requires-python = ">=3.11"
version = "1.0"
license = { file = "LICENSE" }
dependencies = [
  "django>=4.2<5.0",
  "channels>=4.1",
  "daphne>=4.1",
  "gunicorn>=22.0",
  "social-auth-app-django>=5.4",
  "requests>=2.32",
  "psutil>=5.9",
  "celery>=5.4.0",
  "django-celery-results>=2.5",
  "django-markdownify>=0.9",
  "psycopg>=3.1",
  "virtualenv>=20.26",
  "redis>=5.0",
  "channels-redis>=4.2",
  "django-extensions>=3.2",
  "ipython>=8.24.0",
  "mosspy>=1.0",
  "django-debug-toolbar>=4.4",
]

[dependency-groups]
dev = [
  "django-stubs>=5.2.2",
  "furo>=2025.7.19",
  "myst-parser>=4.0.1",
  "pre-commit>=4.2.0",
  "pytest>=8.3.3",
  "pytest-django>=4.8",
  "pytest-xdist>=3.6",
  "sphinx>=8.2.3",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-django>=2.5",
  "typing-extensions>=4.14.1",
  "watchfiles>=1.1.0",
]

ci = [
  "pytest-cov>=6.2.1",
]

[project.urls]
Repository = "https://github.com/tjcsl/tin"

[tool.uv]
required-version = ">=0.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tin.settings"
python_files = "tests.py test_*.py"
norecursedirs = ["media", "migrations", "sandboxing"]
testpaths = "tin"
addopts = "--doctest-modules tin --import-mode=importlib -n 8"
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER"
filterwarnings = [
    "error",
    'ignore:.*Tin is using the dummy sandboxing module. This is insecure.:',
    "ignore::DeprecationWarning:twisted.*:",
]
markers = [
  "no_autocreate_users: don't automatically create users for this test",
]

[tool.coverage.run]
branch = true
source = ["tin"]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "*/urls.py",
    "*/wsgi.py",
    "*/tests.py",
    "*/test_*.py",
]
relative_files = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about code that won't run
    "if __name__ == .__main__.:",
    # Ignore type-checking only code
    "if (typing\\.)?TYPE_CHECKING:",
]

[tool.black]
line-length = 100
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | media
  | migrations
  | secret.*
)/
'''

[tool.ruff]
extend-exclude = [
  ".github",
  ".env",
  "env",
  "secret",
  "media",
  "migrations",
]

show-fixes = false

line-length = 100

target-version = "py311"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # pydocstyle
    "D",
    # flake8-django
    "DJ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-boolean-trap
    "FBT",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # Pylint
    "PL",
    # Pytest
    "PT",
    # pygrep hooks
    "PGH",
    # ruff
    "RUF",
    # pyupgrade
    "UP",
]
ignore = [
  # null=True on charfields
  "DJ001",
  # branching
  "PLR09",
  # magic number comparison
  "PLR2004",
  # mutable class attrs annotated as typing.ClassVar
  "RUF012",
  # missing docstring
  "D1",
  # periods at the end of docstrings
  "D415",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
  "D206",
  "D300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
  "User",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",
  "F403",
]

"*test*" = [
  "FBT",
]

"docs/*" = [
  "BLE001",
]

"scripts/*" = [
  "INP001",
]

"**/management/*" = [
  "INP001",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.codespell]
write-changes = true
# this has to be a string of the form a,b,c
# ignore-words-list = ""
# ignore comments like: # codespell: ignore
ignore-regex=".+# *codespell: *ignore.*"
